feat: 框架能力全面增强 - 限流/幂等/安全/工具
Phase 1: @RateLimiter Redis 限流注解
- 新增 @RateLimiter 注解，支持 5 种 Key 解析策略
- 全局/用户/IP/服务节点/SpEL 自定义 key
- 基于 Redis 令牌桶算法，无外部依赖

Phase 2: XSS 过滤安全模块
- XssFilter + XssRequestWrapper + XssCleaner
- 基于 Jsoup 清理用户输入中的 XSS 脚本
- 支持排除 URL 模式列表

Phase 3: TimeoutRedisCacheManager
- 支持 @Cacheable(cacheNames="user#5m") 自定义 TTL
- 支持 s/m/h/d 时间单位后缀

Phase 4: CacheUtils 增强
- buildAsyncReloadingCache: 异步刷新本地缓存
- buildCache: 简单过期/容量限制缓存

Phase 5: NumberSerializer JS 精度保护
- 超过 2^53-1 的 Long 自动序列化为 String
- LongToStringSerializer: Long 全转 String 序列化器

Phase 6: ErrorCode 值对象
- 封装错误码与消息模板，支持占位符格式化
- 实现 IResultCode，可替代枚举定义错误码

Phase 7: ApiSignature API 签名校验
- appId + timestamp + nonce + sign 防篡改+防重放
- 基于 Redis 缓存 nonce 防止重复攻击

Phase 8: IpUtils 增强
- isInternalIp 内网判断
- getHostName/getHostIp 工具方法